--- a/composer.json
+++ b/composer.json
@@ -54,7 +54,7 @@
         "barryvdh/laravel-debugbar": "^3.14",
         "barryvdh/laravel-ide-helper": "^3.2",
         "fakerphp/faker": "^1.24",
-        "larastan/larastan": "^3.0",
+        "larastan/larastan": "*",
         "laravel/pint": "^1.18",
         "laravel/sail": "^1.39",
         "nunomaduro/collision": "^8.5",
