--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "filament/filament": "^3.2",
         "filament/spatie-laravel-media-library-plugin": "^3.2",
         "filament/spatie-laravel-translatable-plugin": "^3.2",
+        "hammerstone/fast-paginate": "^1.1",
         "guzzlehttp/guzzle": "*",
         "laravel/folio": "^1.1",
         "laravel/framework": "^11.34",
@@ -43,6 +44,7 @@
         "spatie/laravel-queueable-action": "*",
         "spatie/laravel-schemaless-attributes": "^2.5",
         "spatie/laravel-sluggable": "^3.6",
+        "spatie/laravel-responsecache": "^7.6",
         "spatie/laravel-tags": "*",
         "spipu/html2pdf": "^5.2",
         "staudenmeir/laravel-adjacency-list": "^1.22",
