--- a/Http/Livewire/_components.json
+++ b/Http/Livewire/_components.json
@@ -1,1 +1,1 @@
-[{"class_name":"XotBaseComponent","comp_name":"xot-base-component","comp_ns":"Modules\\Xot\\Http\\Livewire\\XotBaseComponent"}]
+[{"name":"xot-base-component","class":"XotBaseComponent","module":null,"path":null,"ns":"Modules\\Xot\\Http\\Livewire\\XotBaseComponent"}]
