--- a/composer.json
+++ b/composer.json
@@ -87,6 +87,7 @@
             "Modules\\Xot\\": "app/",
             "Modules\\Xot\\Database\\Factories\\": "database/factories/",
             "Modules\\Xot\\Database\\Seeders\\": "database/seeders/",
+            "Modules\\Xot\\Database\\Migrations\\": "database/migrations/",
             "Coolsam\\FilamentModules\\": "packages/coolsam/panel-modules/src/"
         },
         "files": [
