--- a/composer.json
+++ b/composer.json
@@ -24,10 +24,10 @@
         "coolsam/panel-modules": "*",
         "doctrine/dbal": "*",
         "fidum/laravel-eloquent-morph-to-one": "*",
-        "filament/filament": "^3.2",
-        "filament/spatie-laravel-media-library-plugin": "^3.2",
-        "filament/spatie-laravel-translatable-plugin": "^3.2",
-        "hammerstone/fast-paginate": "^1.1",
+        "filament/filament": "^3.3",
+        "filament/spatie-laravel-media-library-plugin": "^3.3",
+        "filament/spatie-laravel-translatable-plugin": "^3.3",
+        "aaronfrancis/fast-paginate":"*",
         "guzzlehttp/guzzle": "*",
         "laravel/folio": "^1.1",
         "laravel/framework": "^11.34",
@@ -55,6 +55,9 @@
         "symfony/dom-crawler": "*",
         "thecodingmachine/safe": "^2.5",
         "tightenco/parental": "^1.4"
+    },
+    "require-comment": {
+        "hammerstone/fast-paginate": "^1.1"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.14",
